grammar/.antlr/MiLenguajeParser.java
// Generated from c:/programas/CompiladorEsp/grammar/MiLenguaje.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MiLenguajeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PUBLICO=1, PRIVADO=2, PROTEGIDO=3, ESTATICO=4, ENTERO=5, DECIMAL=6, BOOLEANO=7, 
		CADENA=8, VACIO=9, CLASE=10, INTERFAZ=11, EXTIENDE=12, IMPLEMENTA=13, 
		SI=14, SINO=15, MIENTRAS=16, PARA=17, HACER=18, RUPTURA=19, CONTINUAR=20, 
		RETORNAR=21, NUEVO=22, INTENTAR=23, CAPTURAR=24, FINALMENTE=25, LANZAR=26, 
		IMPORTAR=27, PAQUETE=28, VERDADERO=29, FALSO=30, NULO=31, POTENCIA=32, 
		RAIZ=33, SENO=34, COSENO=35, LOGARITMO=36, ALEATORIO=37, ABSOLUTO=38, 
		MINIMO=39, MAXIMO=40, IMPRIMIR=41, LEER=42, IGUALDAD=43, DESIGUALDAD=44, 
		MENOR_IGUAL=45, MAYOR_IGUAL=46, MENOR=47, MAYOR=48, AND_OP=49, OR_OP=50, 
		NOT_OP=51, SUMA=52, RESTA=53, MULT=54, DIV=55, MOD=56, POTENCIA_OP=57, 
		INCREMENTO=58, DECREMENTO=59, ASIGNACION=60, SUMA_ASIGN=61, RESTA_ASIGN=62, 
		MULT_ASIGN=63, DIV_ASIGN=64, INTERROGACION=65, DOS_PUNTOS=66, LLAVE_ABIERTA=67, 
		LLAVE_CERRADA=68, PAREN_ABIERTO=69, PAREN_CERRADO=70, CORCHETE_ABIERTO=71, 
		CORCHETE_CERRADO=72, PUNTO_COMA=73, COMA=74, PUNTO=75, ARROBA=76, NUMERO_FLOTANTE=77, 
		NUMERO_ENTERO=78, CADENA_LITERAL=79, IDENTIFICADOR=80, COMENTARIO_LINEA=81, 
		COMENTARIO_BLOQUE=82, ESPACIO_BLANCO=83, SALTO_LINEA=84, DESCONOCIDO=85;
	public static final int
		RULE_programa = 0, RULE_elemento = 1, RULE_sentencia = 2, RULE_sentenciaEmparejada = 3, 
		RULE_metodo = 4, RULE_clase = 5, RULE_miembro = 6, RULE_atributo = 7, 
		RULE_listaParametros = 8, RULE_parametro = 9, RULE_modificadorAcceso = 10, 
		RULE_tipoRetorno = 11, RULE_declaracion = 12, RULE_tipo = 13, RULE_impresion = 14, 
		RULE_condicion = 15, RULE_condicionEmparejada = 16, RULE_condicionNoEmparejada = 17, 
		RULE_ciclo = 18, RULE_paraStmt = 19, RULE_retorno = 20, RULE_exprStmt = 21, 
		RULE_bloque = 22, RULE_expr = 23, RULE_equalityExpr = 24, RULE_relationalExpr = 25, 
		RULE_addExpr = 26, RULE_mulExpr = 27, RULE_unaryExpr = 28, RULE_postfixExpr = 29, 
		RULE_primary = 30, RULE_funcionMatematica = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "elemento", "sentencia", "sentenciaEmparejada", "metodo", 
			"clase", "miembro", "atributo", "listaParametros", "parametro", "modificadorAcceso", 
			"tipoRetorno", "declaracion", "tipo", "impresion", "condicion", "condicionEmparejada", 
			"condicionNoEmparejada", "ciclo", "paraStmt", "retorno", "exprStmt", 
			"bloque", "expr", "equalityExpr", "relationalExpr", "addExpr", "mulExpr", 
			"unaryExpr", "postfixExpr", "primary", "funcionMatematica"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'publico'", "'privado'", "'protegido'", "'estatico'", "'entero'", 
			"'decimal'", "'booleano'", "'cadena'", "'vacio'", "'clase'", "'interfaz'", 
			"'extiende'", "'implementa'", "'si'", "'sino'", "'mientras'", "'para'", 
			"'hacer'", "'ruptura'", "'continuar'", "'retornar'", "'nuevo'", "'intentar'", 
			"'capturar'", "'finalmente'", "'lanzar'", "'importar'", "'paquete'", 
			"'verdadero'", "'falso'", "'nulo'", "'potencia'", "'raiz'", "'seno'", 
			"'coseno'", "'logaritmo'", "'aleatorio'", "'absoluto'", "'minimo'", "'maximo'", 
			"'imprimir'", "'leer'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", 
			"'&&'", "'||'", "'!'", "'+'", "'-'", "'*'", "'/'", "'%'", null, "'++'", 
			"'--'", "'='", "'+='", "'-='", "'*='", "'/='", "'?'", "':'", "'{'", "'}'", 
			"'('", "')'", "'['", "']'", "';'", "','", "'.'", "'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PUBLICO", "PRIVADO", "PROTEGIDO", "ESTATICO", "ENTERO", "DECIMAL", 
			"BOOLEANO", "CADENA", "VACIO", "CLASE", "INTERFAZ", "EXTIENDE", "IMPLEMENTA", 
			"SI", "SINO", "MIENTRAS", "PARA", "HACER", "RUPTURA", "CONTINUAR", "RETORNAR", 
			"NUEVO", "INTENTAR", "CAPTURAR", "FINALMENTE", "LANZAR", "IMPORTAR", 
			"PAQUETE", "VERDADERO", "FALSO", "NULO", "POTENCIA", "RAIZ", "SENO", 
			"COSENO", "LOGARITMO", "ALEATORIO", "ABSOLUTO", "MINIMO", "MAXIMO", "IMPRIMIR", 
			"LEER", "IGUALDAD", "DESIGUALDAD", "MENOR_IGUAL", "MAYOR_IGUAL", "MENOR", 
			"MAYOR", "AND_OP", "OR_OP", "NOT_OP", "SUMA", "RESTA", "MULT", "DIV", 
			"MOD", "POTENCIA_OP", "INCREMENTO", "DECREMENTO", "ASIGNACION", "SUMA_ASIGN", 
			"RESTA_ASIGN", "MULT_ASIGN", "DIV_ASIGN", "INTERROGACION", "DOS_PUNTOS", 
			"LLAVE_ABIERTA", "LLAVE_CERRADA", "PAREN_ABIERTO", "PAREN_CERRADO", "CORCHETE_ABIERTO", 
			"CORCHETE_CERRADO", "PUNTO_COMA", "COMA", "PUNTO", "ARROBA", "NUMERO_FLOTANTE", 
			"NUMERO_ENTERO", "CADENA_LITERAL", "IDENTIFICADOR", "COMENTARIO_LINEA", 
			"COMENTARIO_BLOQUE", "ESPACIO_BLANCO", "SALTO_LINEA", "DESCONOCIDO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiLenguaje.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiLenguajeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MiLenguajeParser.EOF, 0); }
		public List<ElementoContext> elemento() {
			return getRuleContexts(ElementoContext.class);
		}
		public ElementoContext elemento(int i) {
			return getRuleContext(ElementoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				elemento();
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 880455990601007598L) != 0) || ((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & 15365L) != 0) );
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementoContext extends ParserRuleContext {
		public SentenciaContext sentencia() {
			return getRuleContext(SentenciaContext.class,0);
		}
		public ClaseContext clase() {
			return getRuleContext(ClaseContext.class,0);
		}
		public ElementoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elemento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterElemento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitElemento(this);
		}
	}

	public final ElementoContext elemento() throws RecognitionException {
		ElementoContext _localctx = new ElementoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_elemento);
		try {
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				sentencia();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				clase();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public SentenciaEmparejadaContext sentenciaEmparejada() {
			return getRuleContext(SentenciaEmparejadaContext.class,0);
		}
		public CondicionNoEmparejadaContext condicionNoEmparejada() {
			return getRuleContext(CondicionNoEmparejadaContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitSentencia(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sentencia);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				sentenciaEmparejada();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				condicionNoEmparejada();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaEmparejadaContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public ImpresionContext impresion() {
			return getRuleContext(ImpresionContext.class,0);
		}
		public MetodoContext metodo() {
			return getRuleContext(MetodoContext.class,0);
		}
		public CondicionEmparejadaContext condicionEmparejada() {
			return getRuleContext(CondicionEmparejadaContext.class,0);
		}
		public CicloContext ciclo() {
			return getRuleContext(CicloContext.class,0);
		}
		public ParaStmtContext paraStmt() {
			return getRuleContext(ParaStmtContext.class,0);
		}
		public RetornoContext retorno() {
			return getRuleContext(RetornoContext.class,0);
		}
		public ExprStmtContext exprStmt() {
			return getRuleContext(ExprStmtContext.class,0);
		}
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public SentenciaEmparejadaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentenciaEmparejada; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterSentenciaEmparejada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitSentenciaEmparejada(this);
		}
	}

	public final SentenciaEmparejadaContext sentenciaEmparejada() throws RecognitionException {
		SentenciaEmparejadaContext _localctx = new SentenciaEmparejadaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sentenciaEmparejada);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ENTERO:
			case DECIMAL:
			case BOOLEANO:
			case CADENA:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				declaracion();
				}
				break;
			case IMPRIMIR:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				impresion();
				}
				break;
			case PUBLICO:
			case PRIVADO:
			case PROTEGIDO:
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				metodo();
				}
				break;
			case SI:
				enterOuterAlt(_localctx, 4);
				{
				setState(82);
				condicionEmparejada();
				}
				break;
			case MIENTRAS:
				enterOuterAlt(_localctx, 5);
				{
				setState(83);
				ciclo();
				}
				break;
			case PARA:
				enterOuterAlt(_localctx, 6);
				{
				setState(84);
				paraStmt();
				}
				break;
			case RETORNAR:
				enterOuterAlt(_localctx, 7);
				{
				setState(85);
				retorno();
				}
				break;
			case POTENCIA:
			case RAIZ:
			case SENO:
			case COSENO:
			case NOT_OP:
			case SUMA:
			case RESTA:
			case INCREMENTO:
			case DECREMENTO:
			case PAREN_ABIERTO:
			case NUMERO_FLOTANTE:
			case NUMERO_ENTERO:
			case CADENA_LITERAL:
			case IDENTIFICADOR:
				enterOuterAlt(_localctx, 8);
				{
				setState(86);
				exprStmt();
				}
				break;
			case LLAVE_ABIERTA:
				enterOuterAlt(_localctx, 9);
				{
				setState(87);
				bloque();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MetodoContext extends ParserRuleContext {
		public ModificadorAccesoContext modificadorAcceso() {
			return getRuleContext(ModificadorAccesoContext.class,0);
		}
		public TipoRetornoContext tipoRetorno() {
			return getRuleContext(TipoRetornoContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(MiLenguajeParser.IDENTIFICADOR, 0); }
		public TerminalNode PAREN_ABIERTO() { return getToken(MiLenguajeParser.PAREN_ABIERTO, 0); }
		public TerminalNode PAREN_CERRADO() { return getToken(MiLenguajeParser.PAREN_CERRADO, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public ListaParametrosContext listaParametros() {
			return getRuleContext(ListaParametrosContext.class,0);
		}
		public MetodoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metodo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterMetodo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitMetodo(this);
		}
	}

	public final MetodoContext metodo() throws RecognitionException {
		MetodoContext _localctx = new MetodoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_metodo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			modificadorAcceso();
			setState(91);
			tipoRetorno();
			setState(92);
			match(IDENTIFICADOR);
			setState(93);
			match(PAREN_ABIERTO);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 480L) != 0)) {
				{
				setState(94);
				listaParametros();
				}
			}

			setState(97);
			match(PAREN_CERRADO);
			setState(98);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClaseContext extends ParserRuleContext {
		public ModificadorAccesoContext modificadorAcceso() {
			return getRuleContext(ModificadorAccesoContext.class,0);
		}
		public TerminalNode CLASE() { return getToken(MiLenguajeParser.CLASE, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(MiLenguajeParser.IDENTIFICADOR, 0); }
		public TerminalNode LLAVE_ABIERTA() { return getToken(MiLenguajeParser.LLAVE_ABIERTA, 0); }
		public TerminalNode LLAVE_CERRADA() { return getToken(MiLenguajeParser.LLAVE_CERRADA, 0); }
		public List<MiembroContext> miembro() {
			return getRuleContexts(MiembroContext.class);
		}
		public MiembroContext miembro(int i) {
			return getRuleContext(MiembroContext.class,i);
		}
		public ClaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterClase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitClase(this);
		}
	}

	public final ClaseContext clase() throws RecognitionException {
		ClaseContext _localctx = new ClaseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_clase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			modificadorAcceso();
			setState(101);
			match(CLASE);
			setState(102);
			match(IDENTIFICADOR);
			setState(103);
			match(LLAVE_ABIERTA);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 494L) != 0)) {
				{
				{
				setState(104);
				miembro();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(LLAVE_CERRADA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MiembroContext extends ParserRuleContext {
		public AtributoContext atributo() {
			return getRuleContext(AtributoContext.class,0);
		}
		public MetodoContext metodo() {
			return getRuleContext(MetodoContext.class,0);
		}
		public MiembroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_miembro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterMiembro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitMiembro(this);
		}
	}

	public final MiembroContext miembro() throws RecognitionException {
		MiembroContext _localctx = new MiembroContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_miembro);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ENTERO:
			case DECIMAL:
			case BOOLEANO:
			case CADENA:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				atributo();
				}
				break;
			case PUBLICO:
			case PRIVADO:
			case PROTEGIDO:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				metodo();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtributoContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(MiLenguajeParser.IDENTIFICADOR, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(MiLenguajeParser.PUNTO_COMA, 0); }
		public AtributoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atributo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterAtributo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitAtributo(this);
		}
	}

	public final AtributoContext atributo() throws RecognitionException {
		AtributoContext _localctx = new AtributoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_atributo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			tipo();
			setState(117);
			match(IDENTIFICADOR);
			setState(118);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaParametrosContext extends ParserRuleContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(MiLenguajeParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(MiLenguajeParser.COMA, i);
		}
		public ListaParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaParametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterListaParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitListaParametros(this);
		}
	}

	public final ListaParametrosContext listaParametros() throws RecognitionException {
		ListaParametrosContext _localctx = new ListaParametrosContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_listaParametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			parametro();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(121);
				match(COMA);
				setState(122);
				parametro();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametroContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(MiLenguajeParser.IDENTIFICADOR, 0); }
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterParametro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitParametro(this);
		}
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parametro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			tipo();
			setState(129);
			match(IDENTIFICADOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
